--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BACKEND_IP=http://localhost:5051
+NEXT_PUBLIC_BACKEND_IP=http://172.17.81.156:5051
 private_key=a495f037-ff31-40ee-927d-78e77582eefc
 
 
