--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chatjak/tycclientstorage": "latest",
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-collapsible": "^1.1.8",
@@ -28,13 +29,20 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.11.0",
+    "gantt-task-react": "^0.3.9",
     "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.501.0",
     "next": "14.2.28",
     "react": "^18",
+    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3",
@@ -42,8 +50,10 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
